[0, 15, 39]: 2018-06-16
  - merge PR27 improving package startup time (and loading when regexp not 
    actually used), provided by 
    `Marcel Bargull <https://bitbucket.org/mbargull/>`__

[0, 15, 37]: 2018-06-13
  - fix for losing precision when roundtripping floats by
    `Rolf Wojtech <https://bitbucket.org/asomov/>`__
  - fix for hardcoded dir separator not working for Windows by
    `Nuno André <https://bitbucket.org/nu_no/>`__
  - typo fix by `Andrey Somov <https://bitbucket.org/asomov/>`__

[0, 15, 37]: 2018-03-21
  - again trying to create installable files for 187

[0, 15, 36]: 2018-03-21
  - again trying to create installable files for 187

[0, 15, 36]: 2018-02-07
  - fix issue 187, incompatibility of C extension with 3.7 (reported by
    Daniel Blanchard)

[0, 15, 35]: 2017-12-03
  - allow ``None`` as stream when specifying ``transform`` parameters to
    ``YAML.dump()``.
    This is useful if the transforming function doesn't return a meaningful value
    (inspired by `StackOverflow <https://stackoverflow.com/q/47614862/1307905>`__ by
    `rsaw <https://stackoverflow.com/users/406281/rsaw>`__).

[0, 15, 34]: 2017-09-17
  - fix for issue 157: CDumper not dumping floats (reported by Jan Smitka)

[0, 15, 33]: 2017-08-31
  - support for "undefined" round-tripping tagged scalar objects (in addition to
    tagged mapping object). Inspired by a use case presented by Matthew Patton
    on `StackOverflow <https://stackoverflow.com/a/45967047/1307905>`__.
  - fix issue 148: replace cryptic error message when using !!timestamp with an
    incorrectly formatted or non- scalar. Reported by FichteFoll.

[0, 15, 32]: 2017-08-21
  - allow setting ``yaml.default_flow_style = None`` (default: ``False``) for
    for ``typ='rt'``.
  - fix for issue 149: multiplications on ``ScalarFloat`` now return ``float``

[0, 15, 31]: 2017-08-15
  - fix Comment dumping

[0, 15, 30]: 2017-08-14
  - fix for issue with "compact JSON" not parsing: ``{"in":{},"out":{}}``