@@ -1,3 +1,9 @@
+[0, 15, 40]: 2018-06-18
+  - added links to landing places as suggested in issue 190 by
+    `KostisA <https://bitbucket.org/ankostis/>`__
+  - fixes issue #201: decoding unicode escaped tags on Python2, reported
+    by `Dan Abolafia <https://bitbucket.org/danabo/>`__
+
 [0, 15, 39]: 2018-06-16
   - merge PR27 improving package startup time (and loading when regexp not 
     actually used), provided by 
